--- a/stylesheets/TaKo.loader.styl
+++ b/stylesheets/TaKo.loader.styl
@@ -7,7 +7,7 @@
   background-color #000000
   width LOADER_BALL
   height LOADER_BALL
-  border-radius(50%)
+  border-radius 3.2px
   animation-name(bounce_circular3dG)
   animation-duration(INIT_DELAY + DELAY_SUM * 7)
   animation-iteration-count(infinite)
