--- a/stylesheets/TaKo.notifications.styl
+++ b/stylesheets/TaKo.notifications.styl
@@ -97,7 +97,7 @@ div[data-element="notification"]
       & .title
         padding-top 0.3em
 
-    &.progress
+    &.progress, &.loading
       width 80%
 
       & .icon
