--- a/stylesheets/TaKo.buttons.styl
+++ b/stylesheets/TaKo.buttons.styl
@@ -23,6 +23,10 @@ button, .button
   &.biggest
     line-height 3em
 
+  &.icon:before
+    font-size 1.2em
+    margin-right 0.4em
+
 header
   & button
     text-indent 0
