--- a/stylesheets/TaKo.lists.styl
+++ b/stylesheets/TaKo.lists.styl
@@ -32,6 +32,14 @@ article ul
 
           &.switch
             margin-top -0.4em
+    & .icon
+      display inline-block
+      float left
+      margin-right .4em
+      line-height 1em
+      width 24px
+      height 24px
+      font-size 1.4em
 
   &.indented > li
     margin INDENT
