--- a/stylesheets/TaKo.section.styl
+++ b/stylesheets/TaKo.section.styl
@@ -35,6 +35,9 @@ header
   width 100%
   z-index HEADER_INDEX
 
+  & .icon
+    font-size 1.5em
+
   & > h1
     font-weight bold
     display inline-block
