Notifications using icons

--- a/stylesheets/TaKo.icons.styl
+++ b/stylesheets/TaKo.icons.styl
@@ -106,7 +106,7 @@
   &.minus-circled
     &:before
       content '\e80b'
-  &.help-circled
+  &.help
     &:before
       content '\e810'
   &.info-circled
