--- a/package/stylesheets/TaKo.css
+++ b/package/stylesheets/TaKo.css
@@ -257,7 +257,7 @@ div[data-element="notification"] > div.window #circular_container{width:64px;mar
 .icon.plus-circled:before{content:'\e809'}
 .icon.minus:before{content:'\e80a'}
 .icon.minus-circled:before{content:'\e80b'}
-.icon.help-circled:before{content:'\e810'}
+.icon.help:before{content:'\e810'}
 .icon.info-circled:before{content:'\e811'}
 .icon.info:before{content:'\e812'}
 .icon.home:before{content:'\e857'}
