--- a/stylesheets/TaKo.buttons.styl
+++ b/stylesheets/TaKo.buttons.styl
@@ -28,7 +28,7 @@ button, .button
     margin-right 0.4em
 
 header
-  & button
+  & button, &.button
     text-indent 0
     display inline-block
     font-weight bold
@@ -41,6 +41,8 @@ header
     margin-bottom 2px
     line-height HEADER_HEIGHT - 4
     font-size 1.8em!important
+    padding-left 0.6em!important
+    padding-right 0.6em!important
 
     &.icon:before
       font-size 1em!important
@@ -56,6 +58,11 @@ header
       border-radius 4px
       padding 0.1em 0.2em 0.1em 0.2em
       font-size FONT_SIZE_SMALLEST
+
+    & >span.icon
+      display inline
+      vertical-align middle
+      margin-right 0.4em
 
   & button.button
     text-indent 0
