--- a/stylesheets/vendor.styl
+++ b/stylesheets/vendor.styl
@@ -39,6 +39,9 @@ border-radius()
 box-shadow()
   vendor('box-shadow', arguments)
 
+box-sizing()
+  vendor('box-sizing', arguments)
+
 background-size()
   vendor('background-size', arguments)
 
