--- a/package/stylesheets/TaKo.css
+++ b/package/stylesheets/TaKo.css
@@ -46,14 +46,16 @@ section.active{opacity:1;z-index:100}
 section:not(.active) > article{display:none}
 section.footer > article{padding-bottom:65px}
 section.no_header > article{top:0}
+section.extended_header > article{top:100px}
 header{position:fixed;top:0;left:0;right:0;height:50px;line-height:50px;width:100%;z-index:101;}
 header .icon{font-size:1.5em}
 header > h1{font-weight:bold;display:inline-block;position:absolute;text-align:center;width:100%;left:0;margin-top:0;z-index:102}
-header > nav{position:fixed;z-index:103;}
-header > nav.right{right:0;}
+header > nav.right{position:fixed;z-index:103;right:0;}
 header > nav.right > button{margin-right:5px}
-header > nav.left{left:0;}
+header > nav.left{position:fixed;z-index:103;left:0;}
 header > nav.left > button{margin-left:5px}
+header > nav:not(.right):not(.left){font-size:1.2em;width:100%;margin:50px 0 0 0;height:50px;line-height:50px;padding:0;display:-webkit-box;display:-ms-box;display:-moz-box;display:-o-box;display:box;-webkit-box-orient:horizontal;-moz-box-orient:horizontal;-ms-box-orient:horizontal;-o-box-orient:horizontal;box-orient:horizontal;-webkit-box-direction:normal;-moz-box-direction:normal;-ms-box-direction:normal;-o-box-direction:normal;box-direction:normal;-webkit-box-pack:justify;-moz-box-pack:justify;-ms-box-pack:justify;-o-box-pack:justify;box-pack:justify;-webkit-box-align:stretch;-moz-box-align:stretch;-ms-box-align:stretch;-o-box-align:stretch;box-align:stretch;}
+header > nav:not(.right):not(.left) > *{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;text-align:center;width:100%;display:block;height:50px}
 footer{position:fixed;bottom:0;left:0;right:0;margin:0 0 -2px 0;width:100%;height:65px;line-height:65px;z-index:101;display:-webkit-box;display:-ms-box;display:-moz-box;display:-o-box;display:box;-webkit-box-orient:horizontal;-moz-box-orient:horizontal;-ms-box-orient:horizontal;-o-box-orient:horizontal;box-orient:horizontal;-webkit-box-direction:normal;-moz-box-direction:normal;-ms-box-direction:normal;-o-box-direction:normal;box-direction:normal;-webkit-box-pack:justify;-moz-box-pack:justify;-ms-box-pack:justify;-o-box-pack:justify;box-pack:justify;-webkit-box-align:stretch;-moz-box-align:stretch;-ms-box-align:stretch;-o-box-align:stretch;box-align:stretch;}
 footer nav{margin:0;-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;height:65px;line-height:65px;padding:0;display:-webkit-box;display:-ms-box;display:-moz-box;display:-o-box;display:box;width:100%;-webkit-box-orient:horizontal;-moz-box-orient:horizontal;-ms-box-orient:horizontal;-o-box-orient:horizontal;box-orient:horizontal;-webkit-box-direction:normal;-moz-box-direction:normal;-ms-box-direction:normal;-o-box-direction:normal;box-direction:normal;-webkit-box-pack:justify;-moz-box-pack:justify;-ms-box-pack:justify;-o-box-pack:justify;box-pack:justify;-webkit-box-align:stretch;-moz-box-align:stretch;-ms-box-align:stretch;-o-box-align:stretch;box-align:stretch;}
 footer nav > *{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;text-align:center;width:100%;display:block;height:65px;}
@@ -583,6 +585,8 @@ header{background-color:#ff7d26;-webkit-background-image:-webkit-linear-gradient
 header .counter{background-color:#ff944d}
 header .button{border:1px solid #b34700}
 header .counter{background-color:#e65c00}
+header > nav:not(.right):not(.left){color:#f4f4f4;background-color:#2f2f2f;}
+header > nav:not(.right):not(.left) .current{background-color:#4e4e4e;border-bottom:4px solid #f60;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-ms-box-sizing:border-box;-o-box-sizing:border-box;box-sizing:border-box}
 footer{background-color:#2f2f2f;color:#f4f4f4 !important;}
 footer nav > ul button{background-color:#2f2f2f}
 footer .counter{background-color:#4e4e4e}
