--- a/stylesheets/TaKo.section.styl
+++ b/stylesheets/TaKo.section.styl
@@ -25,6 +25,9 @@ section
   &.no_header > article
     top 0
 
+  &.extended_header > article
+    top HEADER_HEIGHT * 2
+
 header
   position fixed
   top 0
@@ -49,20 +52,49 @@ header
     z-index HEADER_H1_INDEX
 
   & > nav
-    position fixed
-    z-index HEADER_NAV_INDEX
 
     &.right
+      position fixed
+      z-index HEADER_NAV_INDEX
       right 0
 
       & > button
         margin-right 5px
 
     &.left
+      position fixed
+      z-index HEADER_NAV_INDEX
       left 0
 
       & > button
         margin-left 5px
+
+    &:not(.right)
+      &:not(.left)
+        font-size 1.2em
+        width 100%
+        margin HEADER_HEIGHT 0 0 0
+        height HEADER_HEIGHT
+        line-height HEADER_HEIGHT
+        padding 0
+        display -webkit-box
+        display -ms-box
+        display -moz-box
+        display -o-box
+        display box
+        box-orient horizontal
+        box-direction normal
+        box-pack justify
+        box-align stretch
+
+        & > *
+          box-flex 1
+          text-align center
+          width 100%
+          display block
+          height HEADER_HEIGHT
+
+
 
 footer
   position fixed
