--- a/stylesheets/TaKo.buttons.styl
+++ b/stylesheets/TaKo.buttons.styl
@@ -41,6 +41,7 @@ header
     margin-bottom 2px
     line-height HEADER_HEIGHT - 4
     font-size 1.8em!important
+    padding-top 6px
     padding-left 0.6em!important
     padding-right 0.6em!important
 
@@ -60,8 +61,6 @@ header
       font-size FONT_SIZE_SMALLEST
 
     & >span.icon
-      display inline
-      vertical-align middle
       margin-right 0.4em
 
   & button.button
