--- a/package/stylesheets/TaKo.css
+++ b/package/stylesheets/TaKo.css
@@ -178,11 +178,12 @@ button.smallest,.button.smallest{line-height:2em;padding:0 .6em}
 button.small,.button.small{line-height:2.25em}
 button.big,.button.big{line-height:2.75em}
 button.biggest,.button.biggest{line-height:3em}
-button.icon:before,.button.icon:before{font-size:1.5em;margin-right:.4em}
+button.icon:before,.button.icon:before,button .icon,.button .icon{font-size:1.5em}
+button span:nth-child(2),.button span:nth-child(2){margin-left:.4em}
 header button,header.button{text-indent:0;display:inline-block;font-weight:bold;font-style:normal;text-decoration:none;text-align:center;background-color:rgba(0,0,0,0);height:46px;margin-top:2px;margin-bottom:2px;line-height:46px;font-size:1.4em !important;padding-top:6px;padding-left:.6em !important;padding-right:.6em !important;}
 header button.icon:before,header.button.icon:before{font-size:1em !important}
 header button .counter,header.button .counter{position:relative;top:-.55em;margin-left:.5em;margin-right:.5em;line-height:15px;-webkit-border-radius:2px;-moz-border-radius:2px;-webkit-border-radius:4px;-moz-border-radius:4px;-ms-border-radius:4px;-o-border-radius:4px;border-radius:4px;padding:.1em .2em .1em .2em;font-size:11px}
-header button >span.icon,header.button >span.icon{margin-right:.4em}
+header button>span.icon,header.button>span.icon{margin-right:.4em;font-size:1em !important}
 header button.button{text-indent:0;-webkit-border-radius:5px;-moz-border-radius:5px;-ms-border-radius:5px;-o-border-radius:5px;border-radius:5px;display:inline-block;font-weight:bold;font-style:normal;line-height:35px;text-decoration:none;text-align:center;-webkit-box-shadow:1px 1px rgba(255,255,255,0.25);-moz-box-shadow:1px 1px rgba(255,255,255,0.25);-ms-box-shadow:1px 1px rgba(255,255,255,0.25);-o-box-shadow:1px 1px rgba(255,255,255,0.25);box-shadow:1px 1px rgba(255,255,255,0.25);}
 header button.button .counter{margin-left:.05em;margin-right:.05em}
 footer .icon:before{font-size:1.4em}
@@ -531,8 +532,8 @@ div[data-element="notification"] > div.window #circular_container{width:64px;mar
 .icon.github-1:before{content:'\e92a'}
 .icon.gmail:before{content:'\e929'}
 .icon.to-end-alt:before{content:'\e818'}
-.icon[class*="spin"].animated:before{-webkit-animation:animated-spin 2s infinite linear;-moz-animation:animated-spin 2s infinite linear;-ms-animation:animated-spin 2s infinite linear;-o-animation:animated-spin 2s infinite linear;animation:animated-spin 2s infinite linear;display:inline-block}
-.icon.animated:not([class*="spin"]):before{-webkit-animation:blink 2s linear infinite;-moz-animation:blink 2s linear infinite;-ms-animation:blink 2s linear infinite;-o-animation:blink 2s linear infinite;animation:blink 2s linear infinite}
+.icon[class*="spin"].animated{-webkit-animation:animated-spin 2s infinite linear;-moz-animation:animated-spin 2s infinite linear;-ms-animation:animated-spin 2s infinite linear;-o-animation:animated-spin 2s infinite linear;animation:animated-spin 2s infinite linear;display:inline-block}
+.icon.animated:not([class*="spin"]){-webkit-animation:blink 2s linear infinite;-moz-animation:blink 2s linear infinite;-ms-animation:blink 2s linear infinite;-o-animation:blink 2s linear infinite;animation:blink 2s linear infinite}
 @-webkit-keyframes blink{0%{opacity:1}
 50%{opacity:.2}
 100%{opacity:1}
