--- a/stylesheets/TaKo.buttons.styl
+++ b/stylesheets/TaKo.buttons.styl
@@ -27,7 +27,7 @@ button, .button
     font-size 1.5em
 
   & span:nth-child(2)
-    margin-left .4em
+    margin-left .5em
 
 header
   & button, &.button
@@ -63,7 +63,7 @@ header
       font-size FONT_SIZE_SMALLEST
 
     &>span.icon
-      margin-right 0.4em
+      margin-right .4em
       font-size 1em!important
 
   & button.button
