--- a/package/stylesheets/tako.css
+++ b/package/stylesheets/tako.css
@@ -174,18 +174,30 @@ form.indented > fieldset,.form.indented > fieldset{margin:.8em}
 100%{-webkit-transform:scale(1);-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);transform:scale(1)}
 }
 button,.button{text-indent:0;border:0;display:inline-block;font-weight:bold;font-style:normal;line-height:2.5em;text-decoration:none;text-align:center;padding-left:1em;padding-right:1em;}
-button.smallest,.button.smallest{line-height:2em;padding:0 .6em}
-button.small,.button.small{line-height:2.25em}
-button.big,.button.big{line-height:2.75em}
-button.biggest,.button.biggest{line-height:3em}
+button.smallest,.button.smallest{line-height:2em;padding:0 .6em;}
+button.smallest>img,.button.smallest>img{height:1.3em;top:3px;}
+button.smallest>img+span,.button.smallest>img+span{font-size:11px}
+button.small,.button.small{line-height:2.25em;}
+button.small>img,.button.small>img{height:1.55em;top:4px;}
+button.small>img+span,.button.small>img+span{font-size:.9em}
+button.big,.button.big{line-height:2.75em;}
+button.big>img,.button.big>img{height:2.05em;top:7px;}
+button.big>img+span,.button.big>img+span{font-size:1.2em}
+button.biggest,.button.biggest{line-height:3em;}
+button.biggest>img,.button.biggest>img{height:2.3em;top:8px;}
+button.biggest>img+span,.button.biggest>img+span{font-size:1.4em}
 button.icon:before,.button.icon:before,button .icon,.button .icon{font-size:1.5em}
 button.icon:before,.button.icon:before{margin-right:.5em}
 button.icon:empty:before,.button.icon:empty:before{margin-right:0}
-button span:nth-child(2),.button span:nth-child(2){margin-left:.5em}
+button *:nth-child(2),.button *:nth-child(2){margin-left:.5em}
+button>img,.button>img{width:auto;height:1.8em;margin-right:.4em;position:relative;top:6px;}
+button>img+span,.button>img+span{position:relative;top:0;margin-left:0 !important}
 header button,header.button{text-indent:0;display:inline-block;font-weight:bold;font-style:normal;text-decoration:none;text-align:center;background-color:rgba(0,0,0,0);height:46px;margin-top:2px;margin-bottom:2px;line-height:46px;font-size:1.6em !important;padding-top:6px;padding-left:.6em !important;padding-right:.6em !important;}
 header button.icon:before,header.button.icon:before{font-size:1em !important}
 header button .counter,header.button .counter{position:relative;top:-.55em;margin-left:.5em;margin-right:.5em;line-height:15px;-webkit-border-radius:2px;-moz-border-radius:2px;-webkit-border-radius:4px;-moz-border-radius:4px;-ms-border-radius:4px;-o-border-radius:4px;border-radius:4px;padding:.1em .2em .1em .2em;font-size:11px}
 header button>span.icon,header.button>span.icon{margin-right:.4em;font-size:1em !important}
+header button>img,header.button>img{position:initial !important;width:auto !important;height:34px !important;margin-right:.4em !important;}
+header button>img+span,header.button>img+span{position:relative !important;top:-10px !important;margin-left:0 !important}
 header button.button{text-indent:0;-webkit-border-radius:5px;-moz-border-radius:5px;-ms-border-radius:5px;-o-border-radius:5px;border-radius:5px;display:inline-block;font-weight:bold;font-style:normal;line-height:35px;text-decoration:none;text-align:center;-webkit-box-shadow:1px 1px rgba(255,255,255,0.25);-moz-box-shadow:1px 1px rgba(255,255,255,0.25);-ms-box-shadow:1px 1px rgba(255,255,255,0.25);-o-box-shadow:1px 1px rgba(255,255,255,0.25);box-shadow:1px 1px rgba(255,255,255,0.25);}
 header button.button .counter{margin-left:.05em;margin-right:.05em}
 footer .icon:before{font-size:1.4em}
