--- a/stylesheets/TaKo.section.styl
+++ b/stylesheets/TaKo.section.styl
@@ -37,6 +37,7 @@ header
   line-height HEADER_HEIGHT
   width 100%
   z-index HEADER_INDEX
+  text-align center
 
   & > h1
     font-weight bold
@@ -47,6 +48,11 @@ header
     left 0
     margin-top 0
     z-index HEADER_H1_INDEX
+
+  & > img
+    width auto
+    height HEADER_HEIGHT - 8
+    margin-top 4px
 
   & > nav
 
