--- a/stylesheets/TaKo.forms.styl
+++ b/stylesheets/TaKo.forms.styl
@@ -129,9 +129,10 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
 
   &.line
     background transparent
-    border-color rgba(0,0,0,0)!important
-    border-style solid!important
-    border-width 1px!important
+    border none
+    // border-color rgba(0,0,0,0)!important
+    // border-style solid!important
+    // border-width 1px!important
     -webkit-box-sizing border-box
     -moz-box-sizing border-box
     box-sizing border-box
