Changes on fieldset container

--- a/stylesheets/TaKo.forms.styl
+++ b/stylesheets/TaKo.forms.styl
@@ -162,7 +162,7 @@ fieldset
     margin-top 5px
 
   &>input, &>select, &>textarea, &>label.select
-    float left
+    float right
 
   &:after
     display block
