--- a/stylesheets/TaKo.colors.styl
+++ b/stylesheets/TaKo.colors.styl
@@ -1,13 +1,14 @@
-BLUE    = blue
-RED     = red
-YELLOW  = yellow
-BLACK   = black
-WHITE   = white
+BLUE    = #2340a1
+RED     = #d10400
+YELLOW  = #d9c82b
+BLACK   = #000000
+WHITE   = #ffffff
 GREY    = #c0c0c0
-GREEN   = green
-PINK    = pink
-PURPLE  = purple
-BROWN   = brown
+GREEN   = #02ac00
+PINK    = #ff56d0
+PURPLE  = #9f2ae4
+BROWN   = #b72e00
+ORANGE  = #ff5c11
 FIREFOX = #FF6600
 
 .blue
@@ -80,6 +81,13 @@ FIREFOX = #FF6600
   background-image -ms-linear-gradient(lighten(BROWN, 15%), BROWN)!important
   background-image -o-linear-gradient(lighten(BROWN, 15%), BROWN)!important
   background-image linear-gradient(lighten(BROWN, 15%), BROWN)!important
+.orange
+  background-color ORANGE!important
+  background-image -webkit-linear-gradient(lighten(ORANGE, 15%), ORANGE)!important
+  background-image -moz-linear-gradient(lighten(ORANGE, 15%), ORANGE)!important
+  background-image -ms-linear-gradient(lighten(ORANGE, 15%), ORANGE)!important
+  background-image -o-linear-gradient(lighten(ORANGE, 15%), ORANGE)!important
+  background-image linear-gradient(lighten(ORANGE, 15%), ORANGE)!important
 .firefox
   background-color FIREFOX!important
   background-image -webkit-linear-gradient(lighten(FIREFOX, 15%), FIREFOX)!important
