--- a/stylesheets/TaKo.lists.styl
+++ b/stylesheets/TaKo.lists.styl
@@ -41,6 +41,27 @@ article ul
       height 24px
       font-size 1.4em
 
+    & label:not(.select)
+      line-height 32px
+      height 32px
+      width 20%
+      float left
+      margin-top 5px
+
+    & input, & select, & textarea, & label.select
+      float right
+
+    &:after
+      display block
+      content ""
+      clear both
+
+    & [type="text"], & [type="password"], & [type="date"], & [type="datetime"], & [type="email"], & [type="number"], & [type="search"], & [type="tel"], & [type="time"], & [type="url"], & select, & textarea, & label.select
+      width 80%
+
+    & [type="range"]
+      width 79%
+
   &.indented > li
     margin INDENT
 
