--- a/package/stylesheets/tako.css
+++ b/package/stylesheets/tako.css
@@ -66,10 +66,10 @@ footer nav{margin:0;-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-fle
 footer nav > *{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;text-align:center;width:100%;display:block;height:65px;}
 footer nav > * > *{line-height:65px;height:65px}
 footer nav > *.active{background-color:rgba(250,250,250,0.15)}
-article{min-width:100%;width:auto;display:none;padding-top:5px;margin:0;position:absolute;top:50px;overflow:visible;z-index:99;}
+article{min-width:100%;width:auto;display:none;margin:0;position:absolute;top:50px;overflow:visible;z-index:99;}
 article.active{display:block}
 
-article ul{list-style:none;width:100%;padding:0;margin-left:0;margin-right:0;}
+article ul{list-style:none;width:100%;padding:0;margin:0;}
 article ul > li{position:relative;background-color:#fff;border-bottom:1px solid rgba(0,0,0,0.1);padding:8px 10px 8px 10px;}
 article ul > li.separator{background-color:rgba(0,0,0,0.1);color:#fff;padding:1px 10px 1px 10px}
 article ul > li:first-child{border-top:1px solid rgba(0,0,0,0.1)}
