--- a/stylesheets/TaKo.section.styl
+++ b/stylesheets/TaKo.section.styl
@@ -157,7 +157,7 @@ footer
         background-color rgba(250,250,250,0.15)
 
 article
-  min-width 100%
+  max-width 100%
   width auto
   display none
   margin 0
@@ -165,6 +165,10 @@ article
   top HEADER_HEIGHT
   overflow visible
   z-index ARTICLE_INDEX
+
+  &.horzontal
+    max-width auto
+    min-width 100%
 
   &.active
     display block
