--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -174,3 +174,9 @@ strong
 small
   opacity 0.6
   font-size 1.1em
+
+.hidden
+  display none!important
+
+[data-visible]:not(.show)
+  display none
