--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -230,3 +230,7 @@ label.select
 
     & > select
       border-color lighten(THEME, 30%)
+
+li:active
+  color TEXT
+  background-color lighten(THEME, 20%)
