--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -34,7 +34,7 @@ aside
   transition-duration ASIDE_TRANSITION_TIME
 
   &.show
-    transform(translateX(ASIDE_WIDTH + ASIDE_PADDING * 2))
+    transform(translateX(ASIDE_WIDTH + 8 + ASIDE_PADDING * 2))
 
   & .counter
     margin-top -3px
